--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".OstanActivity"></activity>
+        <activity android:name=".OstanAttractionsActivity"></activity>
+        <activity android:name=".OstanActivity" />
         <activity android:name=".TourismAttractionActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
