--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,9 +17,8 @@
         android:theme="@style/AppTheme">
         <activity android:name=".activities.AttractionActivity" />
         <activity android:name=".activities.ProvinceActivity" />
-        <activity android:name=".activities.TourismAttractionActivity" />
         <activity android:name=".activities.ItemActivity" />
-        <activity android:name=".activities.MainActivity">
+        <activity android:name=".activities.HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
