--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.SaveActivity"></activity>
+        <activity android:name=".activities.SouvenirActivity"></activity>
+        <activity android:name=".activities.SaveActivity" />
         <activity android:name=".activities.AttractionActivity" />
         <activity android:name=".activities.ProvinceActivity" />
         <activity android:name=".activities.ItemActivity" />
