--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,14 @@
     <dist:module dist:instant="true" />
 
     <application
+        android:name=".base.application.BaseApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.SouvenirActivity"></activity>
+        <activity android:name=".activities.SouvenirActivity" />
         <activity android:name=".activities.SaveActivity" />
         <activity android:name=".activities.AttractionActivity" />
         <activity android:name=".activities.ProvinceListActivity" />
